--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root{
+    --color-gray:#E5E7EB;
+    --color-white:white;
+    --color-blue:rgb(49, 49, 255);
+    --color-red:rgb(232, 0, 0);
+    --color-light-green:#5cc400;
+    --color-dark-green:#708e56;
+}
+
 body{
     display: flex;
     font-family: 'Roboto', sans-serif;
@@ -11,15 +20,15 @@ body{
 
 /* FORM */
 form{
-    background-color: blue;
+    background-color: var(--color-gray);
     height: 100vh;
     width: 70vw;
 }
 
 /* TOP */
 .top{
-    height: 35%;
-    padding: 0 4vw;
+    height: 34%;
+    padding: 0 30px;
     position: relative;
     
 }
@@ -27,33 +36,89 @@ form{
     bottom: 0px;
     position: absolute;
 }
-
+.top div p{
+    margin: 3vw 0;
+    font-size: min(20px,2vw);
+    font-weight: 400;
+    width: min(100%,650px);
+}
+em{
+    font-style: italic;
+}
 /* MAIN */
 .main{
-    background-color: green;
-    height: 30%;
-    padding: 2vw 4vw;
+    background-color: var(--color-white);
+    height: 32%;
+    padding: 20px 30px;
 }
 h1{
-    font-size: 2.5vw;
+    font-size: min(2.5vw,25px);
     font-weight: 450;
 }
 h1+p{
-    font-size: 1.5vw;
-    padding: 1.5vw 0;
+    font-size: min(1.5vw,15px);
+    padding: 1vw 0;
 }
 h1+p>strong{
-    font-size: 2vw;
+    font-size: min(2vw,15px);
     font-weight: 800;
     color: red;
 }
 .main > div{
     display: flex;
-    width: 50%;
+    width: 100%;
 }
-
+.main > div>p{
+    width: min(50%,300px);
+    margin: 10px 0;
+}
+.main > div>p>*{
+    display: block;
+}
+label{
+    font-size: 10px;
+}
+label>span{
+    font-weight: 400;
+}
+input{
+    border-radius: 3px;
+    border: 2px solid var(--color-gray);
+}
+input:focus{
+    border: 0;
+    outline: 2px solid var(--color-blue);
+}
+input:valid{
+    border: 0;
+    outline: 2px solid var(--color-light-green);
+}
+input.invalid{
+    border: 0;
+    outline: 2px solid var(--color-red);
+}
 /* BOTTOM */
 .bottom{
-    height: 35%;
-    padding: 0 4vw;
+    padding: 30px 30px;
+}
+button{
+    background-color: var(--color-dark-green);
+    color: var(--color-white);
+    font-weight: 600;
+    font-size: 16px;
+    padding: 9px 40px;
+    border: 0;
+    border-radius: 5px;
+}
+button:hover{
+    cursor: pointer;
+}
+.bottom>p{
+    margin:30px 0;
+    font-size: 14px;
+}
+a:link{
+    color: var(--color-dark-green);
+    font-weight: 700;
+    text-decoration: none;
 }
