--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ button:hover{
     font-size: 14px;
     margin:30px 0;
 }
-a:link{
+a{
     color: var(--color-dark-green);
     font-weight: 700;
     text-decoration: none;
