--- a/style.css
+++ b/style.css
@@ -106,16 +106,17 @@ input{
     border: 2px solid var(--color-gray);
     border-radius: 3px;
     margin-bottom: 15px;
+    outline: 0;
 }
-input:focus{
+.focus{
     border: 0;
     outline: 2px solid var(--color-blue);
 }
-input:valid{
+.valid{
     border: 0;
     outline: 2px solid var(--color-light-green);
 }
-input.invalid{
+.invalid{
     border: 0;
     outline: 2px solid var(--color-red);
 }
